--- a/FrontendGameShock/vedi_videogame_amm_style.css
+++ b/FrontendGameShock/vedi_videogame_amm_style.css
@@ -17,7 +17,7 @@ h1{font-size: 60px;}
 h2{font-size: 50px;}
 h3{font-size: 35px;}
 h4{font-size: 25px;}
-h5{font-size: 20px;}
+h5{font-size: 20px; margin: 5px;}
 h6{font-size: 15px; margin: 5px;}
 
 .wt{color: white;}
@@ -156,7 +156,6 @@ i.fas.fa-bars.fa-2x.wt {
 NAVDRAWER
 -------------- */
 
-
 .navdrawer{
     display: flex;
     align-items: center;
@@ -196,7 +195,6 @@ NAVDRAWER
     color: rgba(219,70,252,1);
 }
 
-
 /* ----------
 CONTENT PAGE
 -------------- */
@@ -205,7 +203,25 @@ CONTENT PAGE
     position: absolute;
     top: 80px;
     left: 250px;
-    height: calc(100% - 80px);
+    /* height: calc(100% - 80px); */
     width: calc(100% - 250px);
     text-align: center;
+    padding: 50px;
+}
+
+.content_item{
+    border-radius: 20px;
+    border: 2px solid rgba(219,70,252,1);
+    width: 100%;
+    height: 120px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    margin: 20px 0px;
+    -webkit-box-shadow: 5px 5px 12px 3px rgba(219,70,252,0.59), 19px 15px 34px 8px rgba(63,94,251,0.53), 19px 15px 34px 8px rgba(63,94,251,0.53); 
+    box-shadow: 5px 5px 12px 3px rgba(219,70,252,0.59), 9px 10px 10px 1px rgba(63,94,251,0.53), 19px 15px 34px 2px rgba(63,94,251,0.53);
+}
+
+.img_item img{
+    height: 100px;
 }
