--- a/FrontendGameShock/home_style.css
+++ b/FrontendGameShock/home_style.css
@@ -153,7 +153,7 @@ i.fas.fa-bars.fa-2x.wt {
         padding-top: 100px;
         flex-direction: column;
         justify-content: flex-start;
-        background: black;
+        background: radial-gradient(circle, rgba(63,94,251,1) 0%, rgba(219,70,252,1) 100%);
         width: 100%;
         height: 100vh;
         z-index: 1;
@@ -188,13 +188,13 @@ SECTION -- SHOWCASE
 -------------- */
 
 .showcase{
-    border: 2px solid red;
+    /* border: 2px solid red; */
     margin-top: 80px;
     height: calc(100vh - 80px);
 }
 
 .showcase_content_img{
-    border: 2px solid orange;
+    /* border: 2px solid orange; */
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -225,18 +225,32 @@ SECTION -- SHOWCASE
 }
 
 /* ----------
+VIDEO
+-------------- */
+
+video{
+    margin: 40px 0px;
+    width: 100%;
+}
+
+
+
+/* ----------
 SECTION -- CHOICE
 -------------- */
 
 .videogame_choice{
-    border: 2px solid red;
+    /* border: 2px solid red; */
     display: flex;
-    margin-top: 50px;
     background: white;
 }
 
+.videogame_choice h2{
+    font-family: 'Lobster', cursive;
+}
+
 .img_videogame{
-    border: 2px solid green;
+    /* border: 2px solid green; */
     background: url(./img/Anime-gruppo.jpg);
     background-size: cover;
     border-radius: 20px;
@@ -245,19 +259,23 @@ SECTION -- CHOICE
 }
 
 .text_videogame{
-    border: 2px solid blue;
+    /* border: 2px solid blue; */
     width: 70%;
     text-align: center;
 }
 
 .accessory_choice{
-    border: 2px solid red;
+    /* border: 2px solid red; */
     display: flex;
     margin-bottom: 50px;
 }
 
+.accessory_choice h2{
+    font-family: 'Lobster', cursive;
+}
+
 .img_accessory{
-    border: 2px solid green;
+    /* border: 2px solid green; */
     background: url(./img/accessori-gaming.jpg);
     background-size: cover;
     border-radius: 20px;
@@ -266,7 +284,7 @@ SECTION -- CHOICE
 }
 
 .text_accessory{
-    border: 2px solid blue;
+    /* border: 2px solid blue; */
     width: 70%;
     text-align: center;
 }
