--- a/FrontendGameShock/accessori_style.css
+++ b/FrontendGameShock/accessori_style.css
@@ -147,7 +147,7 @@ i.fas.fa-bars.fa-2x.wt {
         padding-top: 100px;
         flex-direction: column;
         justify-content: flex-start;
-        background: black;
+        background: radial-gradient(circle, rgba(63,94,251,1) 0%, rgba(219,70,252,1) 100%);
         width: 100%;
         height: 100vh;
         z-index: 1;
@@ -234,7 +234,7 @@ COLLECTION VIDEOGAME
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
-    border: 3px solid red;
+    /* border: 3px solid red; */
     height: auto;
 }
 
