--- a/FrontendGameShock/informazioni_style.css
+++ b/FrontendGameShock/informazioni_style.css
@@ -147,7 +147,7 @@ i.fas.fa-bars.fa-2x.wt {
         padding-top: 100px;
         flex-direction: column;
         justify-content: flex-start;
-        background: black;
+        background: radial-gradient(circle, rgba(63,94,251,1) 0%, rgba(219,70,252,1) 100%);
         width: 100%;
         height: 100vh;
         z-index: 1;
@@ -175,27 +175,48 @@ i.fas.fa-bars.fa-2x.wt {
     }
 }
 
+
+/* --------
+TABLE 
+-------------*/
+
+.background_page{
+    background: url(img/video-game-controls-neon-style-brick-wall_24908-58916.jpg);
+    background-size: cover;
+    padding-bottom: 40px;
+}
+
 /* --------
 TABLE 
 -------------*/
 
 table {
     /*border-collapse: collapse;*/
-    border: 2px solid red;
+    /* border: 2px solid red; */
     margin: auto;
     letter-spacing: 1px;
     border-spacing: 30px;
     text-align: center;
+    background-color: #fff;
+    border-radius: 10px;
 }
 
 caption {
     font-size: 70px;
-    margin-top: 50px;
+    margin-top: 30px;
     margin-bottom: -40px;
 }
 
+caption p{
+    background-color: rgba(255, 255, 255, 0.671);
+    border-radius: 50px;
+    padding: 0px;
+    width: 700px;
+    color: green;
+}
+
 .carta_sconti {
-    margin-top: -15px;
+    margin-top: -55px;
 }
 
 td.riga , th {
@@ -210,6 +231,12 @@ td {
 .chiuso {
     color: red;
 }
+
+@media (max-width: 768px){
+
+    
+}
+
 
 
 /* ----------
