--- a/FrontendGameShock/dettagli_accessorio_style.css
+++ b/FrontendGameShock/dettagli_accessorio_style.css
@@ -270,6 +270,7 @@ RECOMMENDED PRODUCTS
 .recommended{
     /* border: 2px solid green; */
     background: url(img/video-game-controls-neon-style-brick-wall_24908-58916.jpg);
+    background-size: cover;
     text-align: center;
     padding-top: 40px;
 }
