--- a/FrontendGameShock/vedi_videogame_amm_style.css
+++ b/FrontendGameShock/vedi_videogame_amm_style.css
@@ -212,12 +212,6 @@ CONTENT PAGE
     background-attachment: scroll;
 }
 
-.content_page h3{
-    font-size: 50px;
-    background: -webkit-linear-gradient(rgba(219,70,252,1), rgba(63,94,251,1));
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-}
 
 .content_item{
     border-radius: 20px;
@@ -233,7 +227,7 @@ CONTENT PAGE
 
 .content_item:hover{
     -webkit-box-shadow: 5px 5px 12px 3px rgba(219,70,252,0.59), 19px 15px 34px 8px rgba(63,94,251,0.53), 19px 15px 34px 8px rgba(63,94,251,0.53); 
-    box-shadow: 5px 5px 12px 3px rgba(219,70,252,0.59), 9px 10px 10px 1px rgba(63,94,251,0.53), 19px 15px 34px 2px rgba(63,94,251,0.53);
+    box-shadow: 5px 5px 12px 3px rgba(233, 216, 236, 0.59), 9px 10px 10px 1px rgba(63,94,251,0.53), 19px 15px 34px 2px rgba(63,94,251,0.53);
 }
 
 .content_item h5{
@@ -251,4 +245,53 @@ CONTENT PAGE
 
 .img_item img{
     height: 100px;
+}
+
+.title_and_search{
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+}
+
+.title_and_search h1{
+    font-family: 'Lobster', cursive;
+    font-size: 50px;
+    background: -webkit-linear-gradient(rgba(219,70,252,1), rgba(63,94,251,1));
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+.title_and_search form{
+    margin: 0px 170px;
+}
+
+.title_and_search input[type=text]{
+    border-radius: 10px;
+    height: 30px;
+    width: 200px;
+    outline: none;
+}
+
+.title_and_search input[type=text]:focus{
+    border: 2px solid orange;
+    transition: 0.5s;
+}
+
+.title_and_search input[type=submit]{
+    border-radius: 10px;
+    height: 30px;
+    width: 80px;
+    background: linear-gradient(90deg, rgba(63,94,251,1) 0%, rgba(219,70,252,1) 100%);;
+    border: none;
+    color: #fff;
+}
+
+
+.title_and_search input[type=submit]:hover{
+    border: 3px solid orange;
+}
+
+.cestino:hover{
+    background-color: red;
+    border-radius: 10px;
 }
