--- a/gameshock_project/src/main/resources/templates/fragments/navbar.html
+++ b/gameshock_project/src/main/resources/templates/fragments/navbar.html
@@ -14,11 +14,11 @@
 	            </div>
 	            <div class="utility">
 	                <ul class="menu">
-	                    <li class="flip_menu"><a href="home.html">Home</a></li>
-	                    <li class="flip_menu"><a href="videogame.html">VideoGame</a></li>
-	                    <li class="flip_menu"><a href="accessori.html">Accessori</a></li>
-	                    <li class="flip_menu"><a href="informazioni.html">Informazioni</a></li>
-	                    <li class="flip_menu"><a href="login_amm.html">Accedi</a></li>
+	                    <li class="flip_menu"><a href="home.html" th:href="@{'/home'}">Home</a></li>
+	                    <li class="flip_menu"><a href="videogame.html" th:href="@{'/videogame'}">VideoGame</a></li>
+	                    <li class="flip_menu"><a href="accessori.html" th:href="@{'/accessori'}">Accessori</a></li>
+	                    <li class="flip_menu"><a href="informazioni.html" th:href="@{'/informazioni'}">Informazioni</a></li>
+	                    <li class="flip_menu"><a href="login_amm.html" th:href="@{'/login'}">Accedi</a></li>
 	                </ul>
 	                <div class="hamburger"><i class="fas fa-bars fa-2x wt"></i></div>
 	            </div>
