--- a/gameshock_project/src/main/resources/templates/videogame.html
+++ b/gameshock_project/src/main/resources/templates/videogame.html
@@ -1,34 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="videogame_style.css">
-    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <title>Videogame</title>
+    <head th:insert="fragments/base.html :: headerfiles(title=#{pageTitle.videogame})"></head>
+	<head th:insert="fragments/navbar.html :: navbar_css"> </head>
+	<head th:insert="fragments/footer.html :: footer_css"> </head>
+    <link th:href="@{/css/videogame_style.css}" rel="stylesheet">
 </head>
 <body>
 
-    <nav class="navbar">
-        <div class="logo">
-            <div class="img_shock"></div>
-            <h2>GAMESHOCK</h2>
-        </div>
-        <div class="utility">
-            <ul class="menu">
-                <li class="flip_menu"><a href="home.html">Home</a></li>
-                <li class="flip_menu"><a href="videogame.html">VideoGame</a></li>
-                <li class="flip_menu"><a href="accessori.html">Accessori</a></li>
-                <li class="flip_menu"><a href="informazioni.html">Informazioni</a></li>
-                <li class="flip_menu"><a href="login_amm.html">Accedi</a></li>
-            </ul>
-            <div class="hamburger"><i class="fas fa-bars fa-2x wt"></i></div>
-        </div>
-    </nav>
+    <header th:replace="fragments/navbar.html :: navbar"></header>
 
 
     <section class="videogame_content">
@@ -75,32 +55,11 @@
             
         </div>
     </section>
+    
 
-    <footer class="footer">
-        <div class="social_footer">
-            <a href="" class="link_social"><i class="fab fa-facebook-square fa-3x flip"></i></a>
-            <a href="" class="link_social"><i class="fab fa-twitter fa-3x flip"></i></a>
-            <a href="" class="link_social"><i class="fab fa-instagram fa-3x flip"></i></a>
-            <a href="" class="link_social"><i class="fab fa-telegram-plane fa-3x flip"></i></a>
-        </div>
-    </footer>
+    <footer th:replace="fragments/footer.html :: footer"></footer>
 
-    <script>
-        // JQUERY
-        $(document).ready(function(){
-            $( ".hamburger" ).click(function() {
-            $( ".menu" ).toggleClass( "menu--open" );
-            });
-     
-        });
-    
-        ScrollReveal().reveal('.reveal', { easing: 'cubic-bezier(.77,.34,.10,1.0)', distance: '150px' , duration: 2000, interval: 600 });
-    
-        ScrollReveal().reveal('.flip', { rotate: {x: 90, y:0, z: 90}, duration: 2000, mobile: true});
-    
-        ScrollReveal().reveal('.flip_menu', { rotate: {x: 0, y:0, z: 90}, duration: 2000, interval: 600, mobile: false});
-    
-    </script>
+    <script th:replace="fragments/base.html :: script"></script>
     
 </body>
 </html>
