--- a/gameshock_project/src/main/resources/templates/videogame.html
+++ b/gameshock_project/src/main/resources/templates/videogame.html
@@ -22,32 +22,32 @@
 
         <div class="collection_videogame">
             <div class="box_videogame">
-                <a href="dettagli_videogame.html">
-                    <img src="img/2med.jpg" alt="">
+                <a href="dettagli_videogame.html" th:href="@{'/dettaglioVideogame/123'}">
+                    <img src="../static/images/2med.jpg" alt="">
                     <h2>Nome Gioco</h2>
                     <h3 class="prezzo">50$</h3>
                 </a>
             </div>
 
             <div class="box_videogame">
-                <a href="dettagli_videogame.html">
-                    <img src="img/2med.jpg" alt="">
+                <a href="dettagli_videogame.html" th:href="@{'/dettaglioVideogame/123'}">
+                    <img src="../static/images/2med.jpg" alt="">
                     <h2>Nome Gioco</h2>
                     <h3 class="prezzo">50$</h3>
                 </a>
             </div>
 
             <div class="box_videogame">
-                <a href="dettagli_videogame.html">
-                    <img src="img/2med.jpg" alt="">
+                <a href="dettagli_videogame.html" th:href="@{'/dettaglioVideogame/123'}">
+                    <img src="../static/images/2med.jpg" alt="">
                     <h2>Nome Gioco</h2>
                     <h3 class="prezzo">50$</h3>
                 </a>
             </div>
 
             <div class="box_videogame">
-                <a href="dettagli_videogame.html">
-                    <img src="img/2med.jpg" alt="">
+                <a href="dettagli_videogame.html" th:href="@{'/dettaglioVideogame/123'}">
+                    <img src="../static/images/2med.jpg" alt="">
                     <h2>Nome Gioco</h2>
                     <h3 class="prezzo">50$</h3>
                 </a>
