Implementazione inserimento articoli

--- a/gameshock_project/src/main/resources/templates/fragments/navdrawer_amm.html
+++ b/gameshock_project/src/main/resources/templates/fragments/navdrawer_amm.html
@@ -11,10 +11,10 @@
 		        <div class="navdrawer_content">
 		            <ul class="list_operation">
 		                <li><a href="/home_amm.html" th:href="@{'/homeAmm'}">Home Admin</a></li>
-		                <li><a href="/inserisci_videogame_amm.html" th:href="@{'/insertVideogame'}">Insert Videogame</a></li>
-		                <li><a href="/inserisci_accessorio_amm.html" th:href="@{'/insertAccessorio'}">Insert Accessory</a></li>
-		                <li><a href="/vedi_videogame_amm.html" th:href="@{'/showDeleteVideogameAmm'}">Show/Delete Videogame</a></li>
-		                <li><a href="/vedi_accessorio_amm.html" th:href="@{'/showDeleteAccessorioAmm'}">Show/Delete Accessory</a></li>
+		                <li><a href="/inserisci_videogame_amm.html" th:href="@{'/admin/insertVideogame'}">Insert Videogame</a></li>
+		                <li><a href="/inserisci_accessorio_amm.html" th:href="@{'/admin/insertAccessorio'}">Insert Accessory</a></li>
+		                <li><a href="/vedi_videogame_amm.html" th:href="@{'/admin/showDeleteVideogameAmm'}">Show/Delete Videogame</a></li>
+		                <li><a href="/vedi_accessorio_amm.html" th:href="@{'/admin/showDeleteAccessorioAmm'}">Show/Delete Accessory</a></li>
 		            </ul>
 		        </div>
 		    </nav>
