--- a/gameshock_project/src/main/resources/templates/login_amm.html
+++ b/gameshock_project/src/main/resources/templates/login_amm.html
@@ -12,7 +12,7 @@
 
     <section class="page_content">
         <video loop="true" autoplay="autoplay" muted>
-            <source src="../static/images/Lightning - 28067.mp4" type="video/mp4">
+            <source th:src="@{/images/Lightning - 28067.mp4}" type="video/mp4">
             Il browswer non supporta il video
         </video>
         <div class="login_form">
