--- a/gameshock_project/src/main/resources/templates/videogame.html
+++ b/gameshock_project/src/main/resources/templates/videogame.html
@@ -21,38 +21,15 @@
         </div>
 
         <div class="collection_videogame">
-            <div class="box_videogame">
-                <a href="dettagli_videogame.html" th:href="@{'/dettaglioVideogame/123'}">
-                    <img src="../static/images/2med.jpg" alt="">
-                    <h2>Nome Gioco</h2>
-                    <h3 class="prezzo">50$</h3>
+        
+            <div class="box_videogame" th:each="videogame : ${videogames}">
+                <a href="dettagli_videogame.html" th:href="@{'/dettaglioVideogame/' + ${videogame.code}}">
+                    <img th:src="*{'data:image/jpeg;base64,'+ {videogame.image}}" alt="">
+                    <h2 th:text="${videogame.name}">Nome Gioco</h2>
+                    <h3 class="prezzo" th:text="${videogame.newPrice}">50$</h3>
                 </a>
             </div>
 
-            <div class="box_videogame">
-                <a href="dettagli_videogame.html" th:href="@{'/dettaglioVideogame/123'}">
-                    <img src="../static/images/2med.jpg" alt="">
-                    <h2>Nome Gioco</h2>
-                    <h3 class="prezzo">50$</h3>
-                </a>
-            </div>
-
-            <div class="box_videogame">
-                <a href="dettagli_videogame.html" th:href="@{'/dettaglioVideogame/123'}">
-                    <img src="../static/images/2med.jpg" alt="">
-                    <h2>Nome Gioco</h2>
-                    <h3 class="prezzo">50$</h3>
-                </a>
-            </div>
-
-            <div class="box_videogame">
-                <a href="dettagli_videogame.html" th:href="@{'/dettaglioVideogame/123'}">
-                    <img src="../static/images/2med.jpg" alt="">
-                    <h2>Nome Gioco</h2>
-                    <h3 class="prezzo">50$</h3>
-                </a>
-            </div>
-            
         </div>
     </section>
     
