--- a/gameshock_project/src/main/resources/static/css/accessori_style.css
+++ b/gameshock_project/src/main/resources/static/css/accessori_style.css
@@ -1,4 +1,62 @@
 /* ----------
+Configurazioni base
+-------------- */
+
+body, html{
+    margin: 0;
+    padding: 0;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    background: rgb(148, 234, 255);
+}
+
+body{
+    background: transparent;
+}
+
+
+
+*{
+    box-sizing: border-box;
+}
+
+.page{
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    background: white;
+}
+
+h1{font-size: 60px;}
+h2{font-size: 50px;}
+h3{font-size: 35px;}
+h4{font-size: 25px;}
+h5{font-size: 20px;}
+h6{font-size: 15px;}
+
+
+
+
+
+.wt{color: white;}
+.brwh{border: 1px solid white; border-radius: 30px; padding: 5px;}
+
+@media (max-width: 768px){
+
+    body{
+        margin: 0px;
+    }
+
+    h1{font-size: 40px;}
+    h2{font-size: 30px;}
+    h3{font-size: 25px;}
+    h4{font-size: 15px;}
+    h5{font-size: 10px;}
+    h6{font-size: 5px;}
+}
+
+
+
+/* ----------
 COLLECTION VIDEOGAME
 -------------- */
 
@@ -6,6 +64,7 @@ COLLECTION VIDEOGAME
 .accessori_content{
     text-align: center;
     margin-top: 80px;
+    background: rgb(148, 234, 255);
 }
 
 .title_and_search{
@@ -79,6 +138,10 @@ COLLECTION VIDEOGAME
 .box_accessorio a{
     text-decoration: none;
     color: black;
+}
+
+.box_accessorio img{
+	height: 200px;
 }
 
 .prezzo{
