--- a/gameshock_project/src/main/resources/templates/accessori.html
+++ b/gameshock_project/src/main/resources/templates/accessori.html
@@ -21,35 +21,12 @@
         </div>
 
         <div class="collection_accessori">
-            <div class="box_accessorio">
-                <a href="dettagli_accessorio.html" th:href="@{'/dettaglioAccessorio/123'}">
-                    <img src="../static/images/volante.jpg" alt="">
-                    <h2>Nome Accessorio</h2>
-                    <h3 class="prezzo">50$</h3>
-                </a>
-            </div>
-
-            <div class="box_accessorio">
-                <a href="dettagli_accessorio.html" th:href="@{'/dettaglioAccessorio/123'}">
-                    <img src="../static/images/volante.jpg" alt="">
-                    <h2>Nome Accessorio</h2>
-                    <h3 class="prezzo">50$</h3>
-                </a>
-            </div>
-
-            <div class="box_accessorio">
-                <a href="dettagli_accessorio.html" th:href="@{'/dettaglioAccessorio/123'}">
-                    <img src="../static/images/volante.jpg" alt="">
-                    <h2>Nome Accessorio</h2>
-                    <h3 class="prezzo">50$</h3>
-                </a>
-            </div>
-
-            <div class="box_accessorio">
-                <a href="dettagli_accessorio.html" th:href="@{'/dettaglioAccessorio/123'}">
-                    <img src="../static/images/volante.jpg" alt="">
-                    <h2>Nome Accessorio</h2>
-                    <h3 class="prezzo">50$</h3>
+        
+            <div class="box_accessorio" th:each="accessorio : ${accessori}">
+                <a href="dettagli_accessorio.html" th:href="@{'/dettaglioAccessorio/' + ${accessorio.code}}">
+                    <img th:src="*{'data:image/jpeg;base64,'+ {accessorio.image}}" alt="">
+                    <h2 th:text="${accessorio.name}">Nome Accessorio</h2>
+                    <h3 class="prezzo" th:text="${accessorio.newPrice}">50$</h3>
                 </a>
             </div>
             
