--- a/gameshock_project/src/main/resources/templates/admin/vedi_accessorio_amm.html
+++ b/gameshock_project/src/main/resources/templates/admin/vedi_accessorio_amm.html
@@ -16,56 +16,25 @@
     <section class="content_page">
         <div class="title_and_search">
             <h1>Accessory</h1>
-            <form action="#">
-                <input type="text" placeholder="ricerca nome videogame">
+            <form th:action="@{/admin/ricercaAccessorio}" method="POST">
+                <input type="text" name="param" placeholder="search accessory">
                 <input type="submit" value="Search">
             </form>
         </div>
 
-        <div class="content_item">
+
+        <div class="content_item" th:each="accessorio : ${accessori}">
             <a href="dettagli_accessorio.html" class="link_item">
                 <div class="img_item">
-                    <img src="img/controller.jpg" alt="">
+                    <img th:src="*{'data:image/jpeg;base64,'+{accessorio.image}}" alt="">
                 </div>
-                <h5>Name: nomeprova</h5>
-                <h5>Code: codiceprova</h5>
-                <h5>Platform: nomepiattaforma</h5>
+                <h6><span>Name: </span><span th:text="${accessorio.name}">nomeprova</span></h6>
+                <h6><span>Code: </span><span th:text="${accessorio.code}">codiceprova</span></h6>
+                <h6><span>Platform: </span><span th:text="${accessorio.platform.name}">nomepiattaforma</span></h6>					
             </a>
-            <a class="cestino"><img src="img/trash_icon-icons.com_73364.png" alt=""></a>
+            <a class="cestino" th:href="@{'/admin/deleteAccessorioAmm/' + ${accessorio.code}}"><img th:src="@{/images/icona_cestino.png}" alt=""></a>
         </div>
-        <div class="content_item">
-            <a href="dettagli_accessorio.html" class="link_item">
-                <div class="img_item">
-                    <img src="img/controller.jpg" alt="">
-                </div>
-                <h5>Name: nomeprova</h5>
-                <h5>Code: codiceprova</h5>
-                <h5>Platform: nomepiattaforma</h5>
-            </a>
-            <a class="cestino"><img src="img/trash_icon-icons.com_73364.png" alt=""></a>
-        </div>
-        <div class="content_item">
-            <a href="dettagli_accessorio.html" class="link_item">
-                <div class="img_item">
-                    <img src="img/controller.jpg" alt="">
-                </div>
-                <h5>Name: nomeprova</h5>
-                <h5>Code: codiceprova</h5>
-                <h5>Platform: nomepiattaforma</h5>
-            </a>
-            <a class="cestino"><img src="img/trash_icon-icons.com_73364.png" alt=""></a>
-        </div>
-        <div class="content_item">
-            <a href="dettagli_accessorio.html" class="link_item">
-                <div class="img_item">
-                    <img src="img/controller.jpg" alt="">
-                </div>
-                <h5>Name: nomeprova</h5>
-                <h5>Code: codiceprova</h5>
-                <h5>Platform: nomepiattaforma</h5>
-            </a>
-            <a class="cestino" href=""><img src="img/trash_icon-icons.com_73364.png" alt=""></a>
-        </div>
+        
         
     </section>
 
