--- a/gameshock_project/src/main/resources/templates/admin/vedi_videogame_amm.html
+++ b/gameshock_project/src/main/resources/templates/admin/vedi_videogame_amm.html
@@ -15,58 +15,22 @@
     <section class="content_page">
         <div class="title_and_search">
             <h1>Videogame</h1>
-            <form action="#">
-                <input type="text" placeholder="ricerca nome videogame">
+            <form th:action="@{/admin/ricercaVideogame}" method="POST">
+                <input type="text" name="param" placeholder="ricerca videogame">
                 <input type="submit" value="Search">
             </form>
         </div>
 
-        <div class="content_item">
+        <div class="content_item" th:each="videogame : ${videogames}">
             <a href="dettagli_videogame.html" class="link_item">
                 <div class="img_item">
-                    <img src="img/assettoCorsa.jpg" alt="">
+                    <img th:src="*{'data:image/jpeg;base64,'+{videogame.image}}" alt="">
                 </div>
-                <h5>Name: nomeprova</h5>
-                <h5>Code: codiceprova</h5>
-                <h5>Platform: nomepiattaforma</h5>
+                <h6><span>Name: </span><span th:text="${videogame.name}">nomeprova</span></h6>
+                <h6><span>Code: </span><span th:text="${videogame.code}">codiceprova</span></h6>
+                <h6><span>Platform: </span><span th:text="${videogame.platform.name}">nomepiattaforma</span></h6>					
             </a>
-            <a class="cestino" href=""><img src="img/trash_icon-icons.com_73364.png" alt=""></a>
-        </div>
-
-        <div class="content_item">
-            <a href="dettagli_videogame.html" class="link_item">
-                <div class="img_item">
-                    <img src="img/assettoCorsa.jpg" alt="">
-                </div>
-                <h5>Name: nomeprova</h5>
-                <h5>Code: codiceprova</h5>
-                <h5>Platform: nomepiattaforma</h5>
-            </a>
-            <a class="cestino" href=""><img src="img/trash_icon-icons.com_73364.png" alt=""></a>
-        </div>
-
-        <div class="content_item">
-            <a href="dettagli_videogame.html" class="link_item">
-                <div class="img_item">
-                    <img src="img/assettoCorsa.jpg" alt="">
-                </div>
-                <h5>Name: nomeprova</h5>
-                <h5>Code: codiceprova</h5>
-                <h5>Platform: nomepiattaforma</h5>
-            </a>
-            <a class="cestino" href=""><img src="img/trash_icon-icons.com_73364.png" alt=""></a>
-        </div>
-
-        <div class="content_item">
-            <a href="dettagli_videogame.html" class="link_item">
-                <div class="img_item">
-                    <img src="img/assettoCorsa.jpg" alt="">
-                </div>
-                <h5>Name: nomeprova</h5>
-                <h5>Code: codiceprova</h5>
-                <h5>Platform: nomepiattaforma</h5>
-            </a>
-            <a class="cestino" href=""><img src="img/trash_icon-icons.com_73364.png" alt=""></a>
+            <a class="cestino" th:href="@{'/admin/deleteVideogameAmm/' + ${videogame.code}}"><img th:src="@{/images/icona_cestino.png}" alt=""></a>
         </div>
         
     </section>
