--- a/gameshock_project/src/main/resources/templates/fragments/navdrawer_amm.html
+++ b/gameshock_project/src/main/resources/templates/fragments/navdrawer_amm.html
@@ -10,7 +10,7 @@
 			<nav class="navdrawer">
 		        <div class="navdrawer_content">
 		            <ul class="list_operation">
-		                <li><a href="/home_amm.html" th:href="@{'/homeAmm'}">Home Admin</a></li>
+		                <li><a href="/home_amm.html" th:href="@{'/admin/homeAmm'}">Home Admin</a></li>
 		                <li><a href="/inserisci_videogame_amm.html" th:href="@{'/admin/insertVideogame'}">Insert Videogame</a></li>
 		                <li><a href="/inserisci_accessorio_amm.html" th:href="@{'/admin/insertAccessorio'}">Insert Accessory</a></li>
 		                <li><a href="/vedi_videogame_amm.html" th:href="@{'/admin/showDeleteVideogameAmm'}">Show/Delete Videogame</a></li>
