--- a/gameshock_project/src/main/resources/templates/index.html
+++ b/gameshock_project/src/main/resources/templates/index.html
@@ -22,7 +22,7 @@
 
 
         <video loop="true" autoplay="autoplay" muted>
-            <source src="../static/images/gamers.mp4" type="video/mp4" />
+            <source th:src="@{/images/gamers.mp4}" type="video/mp4" />
             Your browser does not support the video tag.
         </video>
 
