--- a/gameshock_project/src/main/resources/static/css/informazioni_style.css
+++ b/gameshock_project/src/main/resources/static/css/informazioni_style.css
@@ -23,18 +23,22 @@ table {
     border-radius: 10px;
 }
 
-caption {
-    font-size: 70px;
-    margin-top: 30px;
-    margin-bottom: -40px;
+
+
+#dove_siamo {
+	text-align: center;
+	margin-left: 320px;
 }
 
-caption p{
+caption p , #dove_siamo p{
+	font-size: 70px;
     background-color: rgba(255, 255, 255, 0.671);
     border-radius: 50px;
     padding: 0px;
     width: 700px;
     color: green;
+    margin-bottom: 30px;
+    margin-top: 100px;
 }
 
 .carta_sconti {
