--- a/gameshock_project/src/main/resources/templates/fragments/navbar.html
+++ b/gameshock_project/src/main/resources/templates/fragments/navbar.html
@@ -14,7 +14,7 @@
 	            </div>
 	            <div class="utility">
 	                <ul class="menu">
-	                    <li class="flip_menu"><a href="home.html" th:href="@{'/home'}">Home</a></li>
+	                    <li class="flip_menu"><a href="home.html" th:href="@{'/index'}">Home</a></li>
 	                    <li class="flip_menu"><a href="videogame.html" th:href="@{'/videogame'}">VideoGame</a></li>
 	                    <li class="flip_menu"><a href="accessori.html" th:href="@{'/accessori'}">Accessori</a></li>
 	                    <li class="flip_menu"><a href="informazioni.html" th:href="@{'/informazioni'}">Informazioni</a></li>
