--- a/gameshock_project/src/main/resources/static/css/admin_style/show_accessory_amm_style.css
+++ b/gameshock_project/src/main/resources/static/css/admin_style/show_accessory_amm_style.css
@@ -3,11 +3,11 @@ CONTENT PAGE
 -------------- */
 
 .content_page{
-    position: absolute;
+    position: fixed;
     top: 80px;
-    left: 250px;
-    /* height: calc(100% - 80px); */
+    left: 260px;
     width: calc(100% - 250px);
+    min-height: calc(100vh -80px);
     text-align: center;
     padding: 50px;
     background: url(../images/scontro-controller.jpg) center center;
@@ -92,6 +92,10 @@ CONTENT PAGE
 
 .title_and_search input[type=submit]:hover{
     border: 3px solid orange;
+}
+
+.cestino img{
+	margin-left: 20px;
 }
 
 .cestino:hover{
