--- a/gameshock_project/src/main/resources/templates/accessori.html
+++ b/gameshock_project/src/main/resources/templates/accessori.html
@@ -26,7 +26,7 @@
                 <a href="dettagli_accessorio.html" th:href="@{'/dettaglioAccessorio/' + ${accessorio.code}}">
                     <img th:src="*{'data:image/jpeg;base64,'+ {accessorio.image}}" alt="">
                     <h2 th:text="${accessorio.name}">Nome Accessorio</h2>
-                    <h3 class="prezzo" th:text="${accessorio.newPrice}">50$</h3>
+                    <h3 class="platform" th:text="${accessorio.platform.name}">platform</h3>
                 </a>
             </div>
             
